crates/toml/tests/snapshots/invalid/table/bare-invalid-character-02.stderr
TOML parse error at line 1, column 6
  |
1 | [bare!key]
  |      ^
invalid unquoted key, expected letters, numbers, `-`, `_`
